<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:orientation="vertical">-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="@dimen/margin_view">


    <TextView
        android:id="@+id/modTitle"
        android:layout_marginTop="30dp"
        style="@style/AppTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textNoSuggestions"
        android:scrollHorizontally="false"
        android:text="@string/mod_subtitle"
        android:textColor="#C4BCAF"
        android:textSize="@dimen/title_text_size" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:scrollbars="none"
        android:textAlignment="textStart">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/enabledLayout"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/margin_right_subtitle_switch"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/enableText"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_adfree"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/enableSubtext"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_title_subtitle"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_enabled"
                            android:textColor="#C4BCAF"
                            android:textSize="@dimen/normal_text_small" />
                    </LinearLayout>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/enableAdfreeSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="right|center"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:gravity="center_horizontal|center_vertical" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#08C4BCAF" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/active_detectors_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginRight="60dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/active_detectors_title"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_ad_detectors"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/active_detectors_subtitle"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_title_subtitle"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_choose_detectors"
                            android:textColor="#C4BCAF"
                            android:textSize="@dimen/normal_text_small" />
                    </LinearLayout>
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#08C4BCAF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/delay_unmute_mod_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginRight="60dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/delay_unmute_mod_title"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_delay_unmute"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/delay_unmute_mod_subtitle"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_title_subtitle"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_not_delayed"
                            android:textColor="#C4BCAF"
                            android:textSize="@dimen/normal_text_small" />
                    </LinearLayout>
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#08C4BCAF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/always_on_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/margin_right_subtitle_switch"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/always_on_text"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_always_on"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/always_on_subtext"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_title_subtitle"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_always_on_desc"
                            android:textColor="#C4BCAF"
                            android:textSize="@dimen/normal_text_small" />
                    </LinearLayout>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/always_on_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="right|center"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:gravity="center_horizontal|center_vertical" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#08C4BCAF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/google_cast_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/margin_right_subtitle_switch"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/google_cast_title"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/mod_mute_chromecast"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/google_cast_subtitle"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_title_subtitle"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="@string/chromecast_subtitle"
                            android:textColor="#C4BCAF"
                            android:textSize="@dimen/normal_text_small" />
                    </LinearLayout>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/google_cast_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="right|center"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:gravity="center_horizontal|center_vertical" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#08C4BCAF" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_marginRight="60dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/mod_version1"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text="> version X.X"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/mod_status_service"
                            style="@style/AppTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_title_subtitle"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:scrollHorizontally="false"
                            android:text=""
                            android:textColor="#C4BCAF"
                            android:paddingBottom="50dp"
                            android:textSize="@dimen/normal_text_small" />
<!--                        android:text="notification service is running"-->
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>




